--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "concurrently \"npm run server\" \"npm run client\"",
+  "client": "react-scripts start",
+  "server": "cd backend && npm run dev"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -49,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.2.0"
   }
 }
