--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "react-scripts start",
-    "server": "cd backend && npm run dev"
-  },
+"scripts": {
+  "start": "concurrently \"npm run server\" \"npm run client\"",
+  "client": "react-scripts start",
+  "server": "cd backend && npm run dev",
+  "build": "react-scripts build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
